# GRN-KAN

./: .gitignore  README.md  data_loader.py  main.py  pyproject.toml  requirements.txt  setup.py  train.py  tutorial.ipynb
examples/: __init__.py  advanced_config.py  basic_usage.py
kan_grn/: __init__.py
kan_grn/cli/: __init__.py  commands.py
kan_grn/core/: __init__.py  data_manager.py  network_builder.py  trainer.py  utils.py
kan_grn/models/: __init__.py  kan_model.py
kan_grn/pipeline/: __init__.py  config.py  main_pipeline.py
model/: 0.0_config.yml  0.0_state  0.1_cache_data  0.1_config.yml  0.1_state  history.txt
test_env/Scripts/: activate  activate.bat  numba
tests/: __init__.py
