[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "kan-grn"
dynamic = ["version"]
description = "Gene Regulatory Network inference using Kolmogorov-Arnold Networks"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["gene regulatory networks", "machine learning", "bioinformatics", "kolmogorov arnold networks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
    "pandas>=1.2.0",
    "scipy>=1.6.0",
    "scikit-learn>=0.24.0",
    "scanpy>=1.7.0",
    "tqdm>=4.50.0",
    "psutil>=5.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.812",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
]
gpu = [
    "torch>=1.9.0+cu111",
    "torchvision>=0.10.0+cu111",
]
hpc = [
    "mpi4py>=3.0.0",
    "dask[distributed]>=2021.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/kan-grn"
Documentation = "https://kan-grn.readthedocs.io/"
Repository = "https://github.com/yourusername/kan-grn.git"
"Bug Tracker" = "https://github.com/yourusername/kan-grn/issues"

[project.scripts]
kan-grn = "kan_grn.cli.commands:main"
kan-grn-train = "kan_grn.cli.commands:train_models"
kan-grn-build-network = "kan_grn.cli.commands:build_network"

[tool.setuptools_scm]
write_to = "kan_grn/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=kan_grn --cov-report=html --cov-report=term-missing"