[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "kan-grn"
dynamic = ["version"]
description = "Gene Regulatory Network inference using Kolmogorov-Arnold Networks"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Posh Raj Dahal", email = "dahal.poshraj24@gmail.com"}
]
keywords = ["gene regulatory networks", "bioinformatics", "machine learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0,<3.0.0",
    "torch>=1.9.0",
    "pandas>=1.3.0",
    "scipy>=1.6.0",
    "scikit-learn>=0.24.0",
    "scanpy>=1.9.0",
    "tqdm>=4.50.0",
    "psutil>=5.7.0",
    "h5py>=3.1.0",
    "anndata>=0.8.0",
    "pykan",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "jupyter>=1.0.0",
]
gpu = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
viz = [
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "networkx>=2.5",
]

[project.urls]
Homepage = "https://github.com/poshraj24/GRN-KAN"
Repository = "https://github.com/poshraj24/GRN-KAN.git"
"Bug Tracker" = "https://github.com/poshraj24/GRN-KAN/issues"

[project.scripts]
kan-grn = "kan_grn.cli.commands:main"

[tool.setuptools_scm]
write_to = "kan_grn/_version.py"